retrieveUnpackaged/objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>DeliveryNumber__c</fullName>
        <description>Delivery / LIKP-VBELN / SAP Delivery number</description>
        <externalId>true</externalId>
        <label>Delivery Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <description>/ The type of this delivery (out, in)</description>
        <label>Delivery Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsIssueDate__c</fullName>
        <description>Delivery / LIKP-WADAT_IST /</description>
        <label>Goods Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>/</description>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SapOrderNumber__c</fullName>
        <description>/ Optional  technical field. Not shown in the UI</description>
        <formula>Order__r.OrderNumber__c</formula>
        <label>SAP Order Number</label>
        <type>Text</type>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Delivery Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>